--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.mvc.view.suffix=.jsp
 server.servlet.context-path=/SpringMVC
 spring.mvc.servlet.path=/servlet
  
-server.port=8081
+server.port=8083
 
 ### DATABASE ###
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -27,3 +27,4 @@ logging.level.org.springframework=warn
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg%n
 
+#test
