--- a/src/main/webapp/WEB-INF/classes/META-INF/maven/tn.esprit.spring/timesheet/pom.xml
+++ b/src/main/webapp/WEB-INF/classes/META-INF/maven/tn.esprit.spring/timesheet/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>tn.esprit.spring</groupId>
 	<artifactId>timesheet</artifactId>
-	<version>1.0</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>timesheet</name>
 	<description>timesheet</description>
 
@@ -21,7 +21,11 @@
 	</properties>
 
 	<dependencies>
-
+		<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.12</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -92,18 +96,18 @@
 			<version>6.1</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		 
 		<dependency>
     			<groupId>org.projectlombok</groupId>
     			<artifactId>lombok</artifactId>
    				<version>1.18.20</version>
     			<scope>provided</scope>
 		</dependency>
+		 
 		
 		<!-- JSF -->
 
 	</dependencies>
-
-
 
 	<build>
 		<outputDirectory>src/main/webapp/WEB-INF/classes</outputDirectory>
