--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,18 @@
 		</dependency>
 		
 		<!-- JSF -->
+		
+		<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.12</version>
+		<scope>test</scope>
+		</dependency>
+		<dependency>
+				<groupId>log4j</groupId>
+				<artifactId>apache-log4j-extras</artifactId>
+				<version>1.2.17</version>
+		</dependency>
 
 	</dependencies>
 
