--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>tn.esprit.spring</groupId>
 	<artifactId>timesheet</artifactId>
-	<version>1.0.4</version>
+	<version>0.0.6-SNAPSHOT</version>
 	<name>timesheet</name>
 	<description>timesheet</description>
 
