--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,16 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <scope>test</scope>
+ </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+    </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
